--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -162,19 +162,19 @@
                     <div class="mt-3">
                         <div>
                             <div class="">For queries regarding the Chernobyl Tissue Bank:</div>
-                            <div class="ms-5 pb-2"><a href="mailto:ncicontactdceg@mail.nih.gov"><i
+                            <div class="pb-3"><a href="mailto:ncicontactdceg@mail.nih.gov"><i
                                     class="fas fa-envelope me-2"></i>
                                 Please contact us via email</a></div>
                         </div>
                         <div>
                             <div class="">For questions on the operation of the CTB website:</div>
-                            <div class="ms-5 pb-2"><a href="mailto:ctb-support@isb-cgc.org"><i class="fas fa-envelope me-2"></i>
+                            <div class="pb-3"><a href="mailto:ctb-support@isb-cgc.org"><i class="fas fa-envelope me-2"></i>
                                 Please contact the ISB-CGC Support Team via email</a>.
                             </div>
                         </div>
                         <div>
                             <div class="">For more information, please visit:</div>
-                            <div class="ms-5 pb-2"><a target="_blank" rel="noopener noreferrer" href="https://dceg.cancer.gov/"><i
+                            <div class="pb-3"><a target="_blank" rel="noopener noreferrer" href="https://dceg.cancer.gov/"><i
                                     class="fas fa-globe me-2"></i> Division of Cancer Epidemiology and Genetics (DCEG),
                                 NCI</a></div>
                         </div>
