--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -29,12 +29,12 @@
         <div class="bg-aqua-green-theme text-center py-5">
             <div class="d-flex justify-content-center py-5">
                 <div class="col-8">
-                    <h1 class="fw-bold pb-3">
+                    <h1 class="pb-3">
                         Chernobyl Tissue Bank
                     </h1>
                     <div class="d-flex justify-content-center">
-                        <div style="font-size: 1.7rem;">
-                            The Chernobyl <span class="fst-italic">(Chornobyl in Ukrainian)</span> Tissue Bank (CTB) is
+                        <div style="font-size: 1.4rem;">
+                            The Chernobyl (<span class="fst-italic">Chornobyl</span> in Ukrainian) Tissue Bank (CTB) is
                             a repository of samples donated by patients with thyroid tumors who live in the areas
                             affected by the accident at the Chernobyl Nuclear Power Plant. The purpose of the CTB is to
                             collect, document, and store these materials, and to facilitate access to these unique
@@ -45,36 +45,36 @@
             </div>
         </div>
         <div class="bg-lightgrey-theme d-flex text-center justify-content-center py-5">
-            <div class="col-10 pb-3 fs-4">The CTB website is hosted by the U.S. National Cancer Institute (NCI), <a
+            <div class="col-10 pb-3 fs-5">The CTB website is hosted by the U.S. National Cancer Institute (NCI), <a
                     href="https://dceg.cancer.gov/" target="_blank" rel="noopener noreferrer">Division of Cancer
                 Epidemiology and Genetics</a>.
             </div>
         </div>
         <div class="bg-mustard-theme text-center py-5">
             <div class="d-flex justify-content-center">
-                <div class="col-xl-6 col-lg-8 col-md-6 mx-auto p-lg-5">
+                <div class="col-10 col-xl-9 col-xxl-8 mx-auto p-md-5">
 {#                <div class="col-xl-6 col-lg-8 col-md-6 mx-auto p-5">#}
                     <div class="row">
                         <div class="col stat-card">
                             <a href="{% url 'about' %}" class="fill-div">
-                                <h4 class="fw-bold aqua-green-text"><i class="fas fa-radiation pb-2"></i><br/>About</h4>
+                                <h5 class="fw-bold aqua-green-text"><i class="fas fa-radiation pb-2"></i><br/>About</h5>
                                 <div class="mt-3">An introduction to the CTB project</div>
                             </a>
                         </div>
                         <div class="col stat-card">
                             <a href="{% url 'research' %}" class="fill-div">
-                                <h4 class="fw-bold orange-text"><i class="fas fa-atom pb-2"></i><br>Research and Data
+                                <h5 class="fw-bold orange-text"><i class="fas fa-atom pb-2"></i><br>Research and Data
                                     Access
-                                </h4>
+                                </h5>
                                 <div class="mt-3">Information to research into the Chernobyl accident</div>
                             </a>
                         </div>
                         <div class="col stat-card">
                             <a href="{% if user.is_verified %} {% url 'dashboard' %} {% else %} {% url 'two_factor:login' %}" {% endif %}
                                class="fill-div">
-                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-search pb-2"></i><br/>Search the
+                                <h5 class="fw-bold dark-aqua-text"><i class="fas fa-search pb-2"></i><br/>Search the
                                     Biorepository
-                                </h4>
+                                </h5>
                                 <div class="mt-3">Find your biological samples for your study</div>
                             </a>
                         </div>
@@ -86,11 +86,11 @@
     <div class="row d-flex d-lg-none d-block">
         <div class="bg-aqua-green-theme d-flex justify-content-center py-2">
             <div class="col-10">
-                <h1 class="fw-bold py-3">
+                <h1 class="py-3">
                     Chernobyl Tissue Bank
                 </h1>
                 <div class="pb-3">
-                    The Chernobyl <span class="fst-italic">(Chornobyl in Ukrainian)</span> Tissue Bank (CTB) is
+                    The Chernobyl (<span class="fst-italic">Chornobyl</span> in Ukrainian) Tissue Bank (CTB) is
                     a repository of samples donated by patients with thyroid tumors who live in the areas
                     affected by the accident at the Chernobyl Nuclear Power Plant. The purpose of the CTB is to
                     collect, document, and store these materials, and to facilitate access to these unique
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="bg-mustard-theme d-flex justify-content-center py-2">
-            <div class="col-10 col-md-8 mx-auto py-3">
+            <div class="col-10 mx-auto py-3">
                 <div class="stat-card mb-4">
                     <a href="{% url 'about' %}" class="fill-div">
                         <h5 class="fw-bold aqua-green-text"><i class="fas fa-radiation pb-2"></i> About</h5>
