--- a/templates/ctb/research_projects.html
+++ b/templates/ctb/research_projects.html
@@ -1459,7 +1459,7 @@
                                             </div>
                                         </li>
                                     </ul>
-                                    <a href="#">Go to top</a>
+                                    <a href="#"><i class="fas fa-arrow-up"></i> Go to top</a>
                                 </div>
                             </div>
                         </div>
@@ -1951,7 +1951,7 @@
                                             </div>
                                         </li>
                                     </ul>
-                                    <a href="#">Go to top</a>
+                                    <a href="#"><i class="fas fa-arrow-up"></i> Go to top</a>
                                 </div>
                             </div>
                         </div>
