--- a/templates/donors/clinical_search_facility.html
+++ b/templates/donors/clinical_search_facility.html
@@ -31,7 +31,7 @@
             <div class="col-lg-8 col mb-3 pe-lg-0">
                 <div class="border light-grey rounded p-3 pb-5">
                     <div class="d-flex justify-content-between">
-                        <h5>Clinical Search Facility</h5>
+                        <div class="fw-bold fs-5">Clinical Search Facility</div>
                         <a id="clinic-skip" class="btn btn-outline-secondary d-none" href="#">
                             Skip
                             <i class="fa-solid fa-angles-right"></i>
