--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="alert alert-primary alert-dismissible fade show" role="alert">
-                    <div><strong>Welcome to the Chernobyl Tissue Bank Biosample Search</strong></div>
+                    <div class="fw-bold fw-6">Welcome to the Chernobyl Tissue Bank Biosample Search</div>
                     <div class="small">
                         The Chernobyl Tissue Bank Biosample Search allows you to check whether the number of
                         biological samples with the associated information you require for your research are
@@ -103,9 +103,9 @@
 {#                            class="fas fa-angle-double-right"></i></a>#}
 {#                </div>#}
                 <div class="border rounded bg-light p-3">
-                    <h5 class="fw-bold">
+                    <div class="fw-bold fs-6">
                         My Saved Searches
-                    </h5>
+                    </div>
                     <hr>
                     {% include 'donors/filter_saved_searches.html' %}
                 </div>
@@ -117,9 +117,9 @@
 {#                </div>#}
                 <div class="border rounded bg-light p-3">
                     <div>
-                        <h5 class="fw-bold">
+                        <div class="fs-6 fw-bold">
                             My Submissions
-                        </h5>
+                        </div>
                     </div>
                     <hr>
                     {% include 'donors/my_applications.html' %}
