--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -29,7 +29,7 @@ Refine by Clinical Parameters
     <div class="container-lg">
         <div class="row">
             <div class="content-header">
-                <h5>Oncogenic Driver Search</h5>
+                <div class="fw-bold fs-5 mb-3">Oncogenic Driver Search</div>
             </div>
             <div id="general-message">
                 {% if title %}
