--- a/templates/donors/saved_searches.html
+++ b/templates/donors/saved_searches.html
@@ -20,9 +20,9 @@
         <div class="row pb-5">
             <div class="col">
                 <div class="border rounded bg-light p-3">
-                    <h5 class="fw-bold">
+                    <div class="fs-6 fw-bold">
                         My Saved Searches
-                    </h5>
+                    </div>
                     <hr>
                     <div>
                         {% include 'donors/filter_saved_searches.html' %}
