--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -2,27 +2,46 @@
 {% load custom_tags %}
 
 {% is_allowed user as has_access %}
-<div class="fixed-top">
-    <nav id="ctb-main-navbar" class="navbar navbar-expand-xl shadow navbar-light" aria-label="Main navigation">
-        <div class="container my-2">
-            <div class="d-none d-xl-inline-block">
+<div class="fixed-top bg-white shadow">
+    <nav id="ctb-main-navbar" class="navbar navbar-expand-xl navbar-light" aria-label="Main navigation">
+        <div class="container my-2 justify-content-between">
+            <div class="d-none d-lg-inline-block">
                 <a class="navbar-brand ps-0" href="{% url 'landing_page' %}">
                     <img class="me-2"
                          src="{% static 'img/ctb-nci-logo.svg' %}"
                          height="50px" alt="nci-logo"></a>
             </div>
-            <div class="d-xl-none d-inline-block">
+            <div class="d-lg-none d-inline-block">
                 <a class="navbar-brand ps-0" href="{% url 'landing_page' %}"><img
-                                                                             src="{% static 'img/ctb-nci-logo.svg' %}"
-                                                                             height="35px" alt="nci-logo"></a>
+                        src="{% static 'img/ctb-nci-logo.svg' %}"
+                        height="35px" alt="nci-logo"></a>
             </div>
-            <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" data-bs-toggle="collapse"
-                    data-bs-target="#ctb-collapsible-navbar"
-                    aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="ctb-collapsible-navbar">
-                <ul class="navbar-nav col-11">
+            <div class="d-xl-none d-inline-block">
+                <button class="d-xl-none d-inline-block btn me-3 collapsed" type="button" id="SearchBarCollapse"
+                        data-bs-toggle="collapse"
+                        data-bs-target=".ctb-search-bar-collapsible"
+                        aria-label="Toggle search bar">
+                    <i class="fas fa-search"></i>
+                </button>
+                <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#ctb-collapsible-navbar"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse container px-0 d-xl-none ctb-search-bar-collapsible" id="ctb-search-bar">
+                <form action="{% url 'ctb_search' %}" method="get" role="search" class="d-flex">
+                    <div class="input-group my-3">
+                        <input type="text" class="form-control" name="q" placeholder=""
+                               aria-label="Search CTB" aria-describedby="button-search">
+                        <button class="btn btn-primary" type="submit" id="button-search">Search
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <div class="navbar-collapse collapse justify-content-between ms-5" id="ctb-collapsible-navbar">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link {% if 'about/' in request.path %} active {% endif %}"
                            href="{% url 'about' %}">About</a>
@@ -39,7 +58,15 @@
                         </a>
                     </li>
                 </ul>
-                <ul class="navbar-nav col-1">
+                <div class="navbar-nav">
+                    <li class="nav-item d-none d-xl-inline-block">
+                        <a class="nav-link btn me-3 collapsed" type="button" id="SearchBarCollapse2"
+                           data-bs-toggle="collapse"
+                           data-bs-target=".ctb-search-bar-collapsible"
+                           aria-label="Toggle search bar">
+                            <i class="fas fa-search"></i>
+                        </a>
+                    </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle {% if 'users/' in request.path or 'account' in request.path %} active {% endif %}"
@@ -69,10 +96,26 @@
                             </a>
                         </li>
                     {% endif %}
-                </ul>
+                </div>
             </div>
         </div>
     </nav>
+    <div class="d-none d-xl-block">
+        <div class="collapse container ctb-search-bar-collapsible" id="ctb-search-bar2">
+            <div class="row justify-content-end">
+                <div class="col-lg-4 col-md-6 col">
+                    <form action="{% url 'ctb_search' %}" method="get" role="search" class="d-flex">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" name="q"
+                                   aria-label="Search by Keyword" aria-describedby="button-search">
+                            <button class="btn btn-primary" type="submit" id="button-search">Search
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% if 'search_facility/' in request.path %}
     <div id="ctb-secondary-navbar" class="d-flex">
@@ -89,7 +132,6 @@
                        href="{% url 'saved_searches' %}">My Saved Searches</a>
                 {% endif %}
             </nav>
-
         </div>
     </div>
 {% endif %}
