Contact DCEG link adjustment

--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -27,7 +27,8 @@
                         <a href="mailto:ctb-support@isb-cgc.org">Help Desk<i class="fas fa-envelope ms-2"></i></a>
                     </div>
                     <div>
-                        <a href="https://dceg.cancer.gov/about/contact-dceg">Contact DCEG<i class="fas fa-globe ms-2"></i></a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://dceg.cancer.gov/about/contact-dceg">Contact
+                            DCEG<i class="fas fa-globe ms-2"></i></a>
                     </div>
                 </div>
             </div>
