navbar width adjustment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .bg-aqua-green-theme{
-    background-color: #2B81A2;
+    background-color: #19769b;
     color: white;
 }
 
@@ -41,7 +41,7 @@ body {
 }
 
 .aqua-green-text{
-    color: #2B81A2;
+    color: #19769b;
 }
 
 .stat-card{
