--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -4,7 +4,7 @@
 {% is_allowed user as has_access %}
 <div class="fixed-top bg-white shadow">
     <nav id="ctb-main-navbar" class="navbar navbar-expand-xl navbar-light" aria-label="Main navigation">
-        <div class="container my-2 justify-content-between">
+        <div class="container-lg my-2 justify-content-between">
             <div class="d-none d-lg-inline-block">
                 <a class="navbar-brand ps-0" href="{% url 'landing_page' %}">
                     <img class="me-2"
