--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 <footer class="mt-auto">
-    <div class="container">
+    <div class="container-lg">
         <div class="px-md-2 py-3 my-1">
             <div class="row">
                 <div class="col-md-4 col-12 mb-4">
