--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -26,7 +26,7 @@
                                 <div class="fieldWrapper pb-4">
                                     {{ field.errors }}
                                     {% if 'E-mail:' in field.label_tag %}
-                                        <label class="form-label">Enter e-mail address:</label>
+                                        <label for="id_email" class="form-label">Enter e-mail address:</label>
                                         <div>{{ field }}</div>
                                     {% else %}
                                         <label class="form-label">{{ field.label_tag }}</label>
