--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -50,35 +50,34 @@
                         criteria.
                     </div>
                     <hr>
-                    <div class="mt-2 d-none d-lg-block">
+                    <div class="mt-2 d-none d-xl-block">
                         <div class="justify-content-between d-flex d-block">
-                            {#                    <div class="mt-2 d-flex gap-1 justify-content-end d-none d-md-block">#}
-                            <div class="d-lg-inline">
+                            <div class="d-xl-inline">
                                 <a type="button" class="btn btn-secondary"
                                    href="{% url 'clinical_search_facility' %}"><i
-                                        class="fas fa-angle-double-left d-lg-none"></i> Back to Clinical Search
+                                        class="fas fa-angle-double-left d-xl-none"></i> Back to Clinical Search
                                 </a>
                                 <a type="button" class="btn btn-secondary"
                                    href="{% url 'search_tissue_samples' %}"><i
-                                        class="fas fa-angle-double-left d-lg-none"></i> Back to Search Tissue Samples
+                                        class="fas fa-angle-double-left d-xl-none"></i> Back to Search Tissue Samples
                                 </a>
                             </div>
-                            <div class="d-lg-inline">
+                            <div class="d-xl-inline">
                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                         data-bs-target="#saveModal"><i
-                                        class="fa-solid fa-floppy-disk d-lg-none"></i> Save
+                                        class="fa-solid fa-floppy-disk d-xl-none"></i> Save
                                 </button>
                                 <a type="button" class="btn btn-primary" href="{% url 'make_application' %}"><i
-                                        class="fas fa-edit d-lg-none"></i> Make Application
+                                        class="fas fa-edit d-xl-none"></i> Make Application
                                 </a>
                                 <a type="button" class="btn btn-primary"
                                    href="{% url 'driver_search_facility' %}&{{ filter_encoded_url }}">Search by Driver
-                                    Mutation <i class="fas fa-angle-double-right d-lg-none"></i>
+                                    Mutation <i class="fas fa-angle-double-right d-xl-none"></i>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="mt-2 gap-2 d-lg-none d-block d-grid">
+                    <div class="mt-2 gap-2 d-xl-none d-block d-grid">
                         <a type="button" class="btn btn-secondary"
                            href="{% url 'clinical_search_facility' %}"><i
                                 class="fas fa-angle-double-left"></i> Back to Clinical Search
@@ -93,7 +92,7 @@
                         </a>
                         <hr>
                     </div>
-                    <div class="mt-2 gap-2 d-lg-none d-block d-grid">
+                    <div class="mt-2 gap-2 d-xl-none d-block d-grid">
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#saveModal"><i
                                 class="fa-solid fa-floppy-disk"></i> Save
