--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -23,11 +23,11 @@
                         aria-label="Toggle search bar">
                     <i class="fas fa-search"></i>
                 </button>
-                <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse"
+                <button class="navbar-toggler border-0 btn collapsed" type="button" id="navbarSideCollapse"
                         data-bs-toggle="collapse"
                         data-bs-target="#ctb-collapsible-navbar"
                         aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fs-4 fas fa-bars"></i>
                 </button>
             </div>
             <div class="collapse container px-0 d-xl-none ctb-search-bar-collapsible" id="ctb-search-bar">
