--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
     <title>{% block title %}Chernobyl Tissue Bank{% endblock %}</title>
     <meta name="description" content="{% block description %}Chernobyl Tissue Bank{% endblock %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="{{ GOOGLE_SITE_VERIFICATION_CODE }}" />
 
     {% block extra_css_libs %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}"/>
